# samples/Ark.MediatorFramework.Sample/Core/Ark.MediatorFramework.Sample.Core.Application/Handlers/Book/BookCoverHandlers.cs
@@ -35,7 +35,7 @@ public sealed class UploadBookCoverHandler : IRequestHandler<UploadBookCoverRequ
 
         return new UploadResponse
         {
-            Id = request.Id.Value,
+            Id = UploadId.From(request.Id.Value),
             Name = request.Attachment.Name,
             ContentType = request.Attachment.ContentType,
             Length = length,
